# templ-cpp-cmake

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakeLists.txt  README.md
.github/: ci.md  contributing.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: branch_naming.yml  build_cmake.yml  cmake_config.json
cmake/: determine-locations.cmake  static-library-bundle.cmake
project/: CMakeLists.txt
project/include/interface/: InterfaceExample.hpp
project/include/internal/: InternalExample.hpp
project/src/: InterfaceExample.cpp  InternalExample.cpp
test/: CMakeLists.txt  InterfaceExample.test.cpp
